--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,12 +33,19 @@ android {
 }
 
 dependencies {
+    //Rxjava
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.13'
+    //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.truthbean.logger:slf4j:0.0.1-RELEASE'
+    implementation 'android.arch.lifecycle:viewmodel:1.1.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
