--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -38,17 +41,21 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxjava:3.0.13'
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
     //ktx
+    implementation 'androidx.fragment:fragment-ktx:1.3.4'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    //slf4j
+    implementation 'com.truthbean.logger:slf4j:0.0.1-RELEASE'
+    //viewModel
+    implementation 'android.arch.lifecycle:viewmodel:1.1.1'
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.truthbean.logger:slf4j:0.0.1-RELEASE'
-    implementation 'android.arch.lifecycle:viewmodel:1.1.1'
-    implementation 'androidx.fragment:fragment-ktx:1.3.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
