--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.distudy.a2021_di_project_android">
+        package="com.distudy.diproject">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-            android:name=".MyApplication"
+            android:name="com.distudy.diproject.MyApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.2021_DI_Project_Android">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.distudy.diproject.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+                <data
+                        android:host="aaaa"
+                        android:scheme="com.distudy.diproject" />
             </intent-filter>
         </activity>
     </application>
