--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,10 @@ dependencies {
     implementation 'com.truthbean.logger:slf4j:0.0.1-RELEASE'
     //viewModel
     implementation 'android.arch.lifecycle:viewmodel:1.1.1'
-
+    //mockito
+    testImplementation 'org.mockito:mockito-inline:3.11.2'
+    testImplementation "org.mockito:mockito-core:3.11.2"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     //noinspection GradleDependency
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
