--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,18 @@ android {
     viewBinding {
         enabled = true
     }
+
+    sourceSets {
+        def commonTestDir = 'src/androidTest/java'
+        test {
+            java.srcDirs += commonTestDir
+            resources.srcDirs += ['src/test/resources']
+        }
+        androidTest {
+            java.srcDirs += commonTestDir
+            resources.srcDirs += ['src/androidTest/resources']
+        }
+    }
 }
 
 dependencies {
@@ -74,6 +86,11 @@ dependencies {
     testImplementation 'org.mockito:mockito-inline:3.11.2'
     testImplementation "org.mockito:mockito-core:3.11.2"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+    //Espresso
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //mockwebserver
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.1'
 
     //noinspection GradleDependency
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -81,7 +98,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
 }
